Fixed white background showing up on mobile devices.
On smaller screen the page would become white. Added a media query to increase the backgrounds length.

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@ h1{
 }
 
 .bg{
-     height:100%;
+     height:100vh;
     background: linear-gradient(0deg, #000000, #05a9ca 80%) no-repeat;
 }
+
 
 .card:hover{
  transform: scale(1.1);
@@ -62,8 +63,14 @@ h1{
     text-decoration: none;
 }
 
-      
-         
-    
-     
-    
+
+@media only screen 
+and (max-device-width: 1000px)
+{ 
+  .bg{
+     height:150vh;
+    background: linear-gradient(0deg, #000000, #05a9ca 80%) no-repeat;
+}
+
+
+ }
